--- a/ReadingList/app/src/main/res/values/strings.xml
+++ b/ReadingList/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ReadingList</string>
     <string name="book_title">Book Title:</string>
     <string name="read_book">Read Book</string>
+    <string name="reason_to_read">Reason to Read</string>
 </resources>
