--- a/ReadingList/app/src/main/res/values/strings.xml
+++ b/ReadingList/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="book_title">Book Title:</string>
     <string name="read_book">Read Book</string>
     <string name="reason_to_read">Reason to Read</string>
+    <string name="cancel">Cancel</string>
+    <string name="submit">Submit</string>
 </resources>
